--- a/QC_report.ipynb
+++ b/QC_report.ipynb
@@ -67,7 +67,33 @@
     "# Input path to manifest \n",
     "manifest_file <- \"data/manifest_large_multibatch.csv\"\n",
     "# Path to outputs\n",
-    "reprep_repool_summary_path <- \"reprep_repool_summary.csv\""
+    "reprep_repool_summary_path <- \"reprep_repool_summary.csv\"\n",
+    "polyclonal_information_path <- \"positive_control_polyclonal_info.csv\"\n",
+    "neg_control_information_path <- \"negative_control_amplified_loci.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb970bc3-0015-4b67-a66d-02dcf2108806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jessica output \n",
+    "results_dir <- \"data/Jessica_results_example\"\n",
+    "manifest_file <- \"data/Jessica_manifest.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f92d0998-f0ea-4b5e-9875-fa5a85146a04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jessica output 2\n",
+    "results_dir <- \"data/Jessica_results_example_nextseq\"\n",
+    "manifest_file <- \"data/Jessica_manifest_nextseq.csv\""
    ]
   },
   {
@@ -77,12 +103,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If TRUE, trims extra sequencing-related information from SampleID to match the manifest format\n",
+    "standardise_sampleID <- TRUE\n",
     "# Input a threshold for the reads needed to classify a locus as having amplified successfully\n",
     "read_threshold <- 100\n",
     "# Input a minimum Reads per ASV used as a filter for the positive control plot\n",
-    "read_filter <- 1 \n",
+    "read_filter <- 0 \n",
     "# Minimum Allele Frequency per ASV used as a filter for positive control plot \n",
-    "af_filter <- 0.2\n",
+    "af_filter <- 0\n",
+    "# Read threshold to output locus information for negative control\n",
+    "negative_control_read_threshold <- 50 \n",
     "# Proportion of targets successfully amplified; samples below this threshold require re-prep\n",
     "reprep_threshold <- 0.5 \n",
     "# Proportion of targets successfully amplified; samples below this threshold require re-pool\n",
@@ -97,6 +127,7 @@
    "outputs": [],
    "source": [
     "# Print summary of user inputs\n",
+    "cat(\"User Input Summary\\n\")\n",
     "cat(\"Results Directory:\", results_dir, \"\\n\")\n",
     "cat(\"Manifest File:\", manifest_file, \"\\n\")\n",
     "cat(\"Read Threshold for Successful Amplification:\", read_threshold, \"\\n\")\n",
@@ -111,6 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create file paths \n",
     "sample_coverage_file <- file.path(results_dir,\"sample_coverage.txt\")\n",
     "amplicon_coverage_file <- file.path(results_dir,\"amplicon_coverage.txt\")\n",
     "allele_data_path <- file.path(results_dir, \"allele_data.txt\")"
@@ -158,15 +190,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78da890e-4d1b-41a1-b5a4-4d8afef8915c",
+   "id": "6f05366a-2e59-4144-9503-a2460e4f215d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove species loci\n",
     "amplicon_coverage <- amplicon_coverage %>%\n",
-    "  filter(!grepl(\"-1AB$\", Locus))\n",
-    "allele_data <- allele_data %>% \n",
-    "    filter(!grepl(\"-1AB$\", Locus))"
+    "  mutate(SampleID = if (standardise_sampleID) SampleID %>%\n",
+    "           sub(\"_L001$\", \"\", .) %>%\n",
+    "           word(., start = 1, end = -2, sep = \"_\") else SampleID) %>%\n",
+    "           filter(!grepl(\"-1AB$|-1B2$\", Locus)) \n",
+    "allele_data <- allele_data %>%\n",
+    "  mutate(SampleID = if (standardise_sampleID) SampleID %>%\n",
+    "           sub(\"_L001$\", \"\", .) %>%\n",
+    "           word(., start = 1, end = -2, sep = \"_\") else SampleID) %>%\n",
+    "           filter(!grepl(\"-1AB$|-1B2$\", Locus)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57487db0-5e24-4c3f-aac6-fdcfa2a526e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count the number of loci per reaction\n",
+    "nloci_table <- allele_data %>%\n",
+    "  distinct(Locus) %>% \n",
+    "  mutate(reaction = str_extract(Locus, \"\\\\d(?=[A-Z]*$)\")) %>%\n",
+    "  count(reaction) %>%\n",
+    "  rename(nreactionloci = n) \n",
+    "nloci_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd68ea04-1814-458d-9179-b6d301358c67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If the number of loci per reaction above are incorrect then you can override them below \n",
+    "\n",
+    "# Manually define the values \n",
+    "# reaction1_loci <- 205\n",
+    "# reaction2_loci <- 31\n",
+    "\n",
+    "# # Put into a table\n",
+    "# nloci_table <- data.frame(\n",
+    "#   reaction = c('1', '2'),\n",
+    "#   nreactionloci = c(reaction1_loci, reaction2_loci)\n",
+    "# )\n",
+    "# nloci_table"
    ]
   },
   {
@@ -176,13 +250,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_data <- function(manifest, sample_coverage) {\n",
+    "merge_data <- function(manifest, sample_coverage, standardise_sampleID) {\n",
     "    merged_data <- sample_coverage %>%\n",
+    "        mutate(SampleID = if (standardise_sampleID) SampleID %>%\n",
+    "               sub(\"_L001$\", \"\", .) %>%\n",
+    "               word(., start = 1, end = -2, sep = \"_\") else SampleID) %>%\n",
     "        mutate(Reads = as.numeric(Reads)) %>% \n",
     "        replace_na(list(Reads = 0)) %>%\n",
     "        pivot_wider(names_from = Stage, values_from = Reads) %>%\n",
-    "        left_join(manifest, by = \"SampleID\") \n",
-    "  \n",
+    "        inner_join(manifest, by = \"SampleID\") \n",
     "    return(merged_data)\n",
     "}"
    ]
@@ -195,7 +271,7 @@
    "outputs": [],
    "source": [
     "# Reformat sample_coverage and add sample information from manifest \n",
-    "sample_coverage_with_manifest <- merge_data(manifest, sample_coverage)"
+    "sample_coverage_with_manifest <- merge_data(manifest, sample_coverage, standardise_sampleID)"
    ]
   },
   {
@@ -205,9 +281,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add Columns to amplicons to specify experiment, SampleType\n",
-    "amplicon_coverage_with_manifest = amplicon_coverage %>%\n",
-    "  left_join(manifest,by = c(\"SampleID\"))"
+    "# Add manifest to amplicon coverage\n",
+    "amplicon_coverage_with_manifest <- amplicon_coverage %>%\n",
+    "    inner_join(manifest,by = c(\"SampleID\"))"
    ]
   },
   {
@@ -233,10 +309,8 @@
    "source": [
     "# Create sample summary stats \n",
     "summary_samples <- amplicon_coverage_with_manifest %>%\n",
-    "  # Count unique loci per reaction\n",
-    "  group_by(reaction) %>%\n",
-    "  mutate(nreactionloci = n_distinct(Locus)) %>%\n",
-    "  ungroup() %>%\n",
+    "  # Join the nloci_table\n",
+    "  left_join(nloci_table, by = \"reaction\") %>%\n",
     "  # Calculate number of loci with reads over threshold per reaction\n",
     "  group_by(SampleID, Batch, SampleType, reaction, nreactionloci) %>%\n",
     "  summarize(\n",
@@ -250,7 +324,7 @@
     "      ) %>%\n",
     "  ungroup() %>%\n",
     "  mutate(prop_good_loci = n_good_loci / nreactionloci) %>%\n",
-    "  left_join(manifest, by = join_by(SampleID, Batch, SampleType))"
+    "  inner_join(manifest, by = join_by(SampleID, Batch, SampleType))"
    ]
   },
   {
@@ -267,6 +341,21 @@
     "  \"sample\" = \"darkgrey\",\n",
     "  \"NA\" = \"white\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6b86af2-6bc3-4524-b99e-e03f6131da3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print summary of samples in files\n",
+    "cat(\"Sample Summary\\n\")\n",
+    "cat(length(unique(manifest$SampleID)), \"samples in manifest\", \"\\n\")\n",
+    "cat(length(unique(allele_data$SampleID)), \"samples in allele data file\", \"\\n\")\n",
+    "cat(length(unique(sample_coverage_with_manifest$SampleID)), \"samples in manifest and sample coverage file\", \"\\n\")\n",
+    "cat(length(unique(amplicon_coverage_with_manifest$SampleID)), \"samples in manifest and amplicon coverage file\", \"\\n\")"
    ]
   },
   {
@@ -288,11 +377,14 @@
    "source": [
     "# Function to generate the plot\n",
     "generate_dimer_plot <- function(sample_coverage_with_manifest, sample_colours) {\n",
-    "    dimer_plot <- ggplot(data = sample_coverage_with_manifest) +\n",
+    "    \n",
+    "    dimer_plot <- ggplot(data = sample_coverage_with_manifest %>%  arrange(desc(SampleType))) +\n",
     "      # Plot points with different colors for each sample type\n",
     "      geom_point(aes(x = Input + 0.9, \n",
     "                     y = (1 - OutputPostprocessing / Input) * 100, \n",
     "                     color = SampleType),\n",
+    "                 shape = 1, \n",
+    "                 alpha=0.8,\n",
     "                 stroke = 1) +\n",
     "    # Log scale for the x-axis\n",
     "    scale_x_log10() +\n",
@@ -454,6 +546,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105ea609-8978-42bd-be97-d6e132df03b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polyclonal_information <- pos_control_data %>%\n",
+    "  inner_join(locus_summary, by = c(\"SampleID\", \"Locus\")) %>%\n",
+    "  filter(Meets_Multi_ASV_Criteria == TRUE)\n",
+    "write.csv(polyclonal_information, polyclonal_information_path, row.names = FALSE)\n",
+    "head(polyclonal_information) |>\n",
+    "  kable() |>\n",
+    "  kable_styling(bootstrap_options = c(\"striped\", \"hover\", \"condensed\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "62571b29-a1fd-4c42-867b-9ec7c68237fc",
    "metadata": {},
@@ -491,13 +599,30 @@
     "    max(amplicons_negative$OutputPostprocessing) == 0,\n",
     "    1e2,\n",
     "    max(amplicons_negative$OutputPostprocessing)\n",
-    "  ) / 50, ifelse(\n",
+    "  ) / 50,\n",
+    "  ifelse(\n",
     "    max(amplicons_negative$OutputPostprocessing) == 0,\n",
     "    1e2,\n",
-    "    max(amplicons_negative$OutputPostprocessing)\n",
+    "    max(amplicons_negative$OutputPostprocessing) + 10 \n",
     "  )) +\n",
     "  xlab(\"Reads\") +\n",
     "  ylab(\"Count\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fc0b297-73e6-46bd-bb2b-9f285d0b6609",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neg_control_information <- amplicons_negative %>%\n",
+    "    filter(OutputPostprocessing > negative_control_read_threshold) %>%\n",
+    "    select('SampleID','Locus','OutputPostprocessing')\n",
+    "write.csv(neg_control_information, neg_control_information_path, row.names = FALSE)\n",
+    "head(neg_control_information_path) |>\n",
+    "  kable() |>\n",
+    "  kable_styling(bootstrap_options = c(\"striped\", \"hover\", \"condensed\"))"
    ]
   },
   {
@@ -524,15 +649,19 @@
     "  ungroup()  # Remove the grouping for further operations\n",
     "\n",
     "# Create the bar plot\n",
-    "ggplot(summary_data, aes(y = Locus, x = sum_reads, fill = reaction)) +\n",
+    "ggplot(summary_data, aes(x = Locus, y = sum_reads, fill = reaction)) +\n",
     "  geom_bar(stat = \"identity\", position = \"dodge\") +  # Bar plot with 'sum_reads' on the y-axis\n",
-    "  xlab(\"Sum of Sample Reads\") +  # Label for the x-axis\n",
-    "  ylab(\"Locus\") +  # Label for the y-axis\n",
+    "  xlab(\"Locus\") +  # Label for the x-axis\n",
+    "  ylab(\"Sum of Reads Across Controls\") +  # Label for the y-axis\n",
     "  ggtitle(\"Total Reads per Locus Across Negative Controls\") +  # Title of the plot\n",
-    "  theme(axis.text.x = element_text(angle = 90, hjust = 1), # Rotate x-axis labels if needed\n",
-    "        plot.margin = margin(0, 0, 0, 0, \"cm\"),  # Increase the plot's margin to make it wider\n",
-    "        axis.text = element_text(size = 2),  # Optional: adjust text size\n",
-    "        axis.title = element_text(size = 12)) +\n",
+    "  # theme(axis.text.x = element_text(angle = 90, hjust = 1), # Rotate x-axis labels if needed\n",
+    "  #       axis.text = element_text(size = 2),  # Optional: adjust text size\n",
+    "  #       axis.title = element_text(size = 12)) +\n",
+    "  theme(\n",
+    "    axis.text.x = element_blank(),  # Remove x-axis text labels\n",
+    "    axis.ticks.x = element_blank(), # Remove x-axis ticks\n",
+    "    axis.title = element_text(size = 12)\n",
+    "  ) +\n",
     "  scale_fill_manual(values = c(\"steelblue\", \"orange\", \"green\", \"purple\"))  # Customize colors per Batch (optional)\n",
     "    "
    ]
@@ -568,9 +697,12 @@
     "      geom_point(aes(x = Parasitemia + 0.9, \n",
     "                     y = prop_good_loci, \n",
     "                     color = SampleType),\n",
+    "                 shape = 1,\n",
+    "                 alpha=0.8,\n",
     "                 stroke = 1) +\n",
     "    # Log scale for the x-axis\n",
     "    scale_x_log10() +\n",
+    "    ylim(0,1) + \n",
     "    # Faceting by Batch column\n",
     "    facet_grid(cols = vars(Batch),rows = vars(reaction),\n",
     "               scale = \"free_y\")+\n",
@@ -616,11 +748,14 @@
     "# Function to generate the plot\n",
     "generate_reads_by_amplification_success_plot <- function(summary_samples, amplification_threshold, \n",
     "                                                         sample_colours, reprep_threshold, repool_threshold) {\n",
+    "    \n",
     "    amp_plot <- ggplot(data = summary_samples) +\n",
     "      # Plot points with different colors for each sample type\n",
     "      geom_point(aes(x = reads_per_sample + 0.9,  \n",
     "                     y=prop_good_loci,\n",
     "                     color = SampleType),\n",
+    "                 shape=1,\n",
+    "                 alpha=0.8,\n",
     "                 stroke = 1) +\n",
     "    # Log scale for the x-axis\n",
     "    scale_x_log10() +\n",
@@ -714,7 +849,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_plate_template <- function(batches, nrows=8, ncols=12) {\n",
+    "create_plate_template <- function(summary_samples, batches, nrows=8, ncols=12) {\n",
     "    quadrants <-\n",
     "      expand.grid(\n",
     "        Batch = batches,\n",
@@ -727,9 +862,16 @@
     "        xmin = x - 0.45,\n",
     "        xmax = x + 0.45\n",
     "      ) %>%\n",
-    "      mutate(Row = rev(letters[1:nrows])[y]) %>%\n",
+    "      mutate(Row = (letters[1:nrows])[y]) %>%\n",
+    "      # left_join(\n",
+    "      #   summary_samples %>%  select(Batch, Column, Row, SampleType) %>% distinct(),\n",
+    "      #   by = c(\"Batch\", \"x\" = \"Column\", \"Row\" = \"Row\")\n",
+    "      # )\n",
     "      left_join(\n",
-    "        summary_samples %>%  select(Batch, Column, Row, SampleType) %>% distinct(),\n",
+    "        summary_samples %>%\n",
+    "          mutate(Row = tolower(Row)) %>%  # Convert Row to lowercase in summary_samples\n",
+    "          select(Batch, Column, Row, SampleType) %>%\n",
+    "          distinct(),\n",
     "        by = c(\"Batch\", \"x\" = \"Column\", \"Row\" = \"Row\")\n",
     "      )\n",
     "    return(quadrants)\n",
@@ -743,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quadrants <- create_plate_template(unique(summary_samples$Batch))"
+    "quadrants <- create_plate_template(summary_samples, unique(summary_samples$Batch))"
    ]
   },
   {
@@ -763,7 +905,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_plate_layout <- function(summary_samples, sample_colours) {\n",
+    "plot_plate_layout <- function(summary_samples, quadrants, sample_colours) {\n",
     "    plate_layout <- ggplot(summary_samples) +\n",
     "      # Tiles representing sample types, fill based on SampleType\n",
     "      geom_tile(aes(x = Column, y = Row, fill = SampleType), color = \"white\") +\n",
@@ -803,7 +945,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_plate_layout(summary_samples, sample_colours)"
+    "plot_plate_layout(summary_samples, quadrants, sample_colours)"
    ]
   },
   {
@@ -897,6 +1039,14 @@
    "source": [
     "plot_plate_with_feature(summary_samples, sample_colours, \"prop_good_loci\", 0.5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15133811-eb41-4ecd-b27f-69b6b7da18d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
